--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-us">
 <head>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
     <title>Contact</title>
