--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<html>
-    <head>
+<!DOCTYPE html> 
+<html lang="en-us">
+    <head>        
         <link rel="stylesheet" type="text/css" href="assets/css/style.css"/> 
         <title>Portfolio About</title>
     </head> 
