--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2>About Me</h2>
         <img class="Me" src="assets/images/Heidi.jpg" alt="Heidi"> 
             <p>
-            "I am a full-stack web developer living in Seattle, WA. I spend my days with my hands in different areas of web development ranging from back end programming to front end web development (HTML, CSS, and JavaScript).
+            "I am a full-stack web developer living in Seattle, WA. I spend my days with my hands in different areas of web development ranging from back end programming to front end web development (HTML, CSS, JavaScript, jQuery).
             </p>
             <p>
             My previous involvement in the creative arts as a pianist and piano teacher (M Mus) contributes to the artistic value of the web design; combined with my studies in psychology (Psych hons), which adds additional sensitivity and comprehension to the user’s needs.
