--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <h2>About Me</h2>
         <img class="Me" src="assets/images/Heidi.jpg" alt="Heidi"> 
             <p>
-            "I am a full-stack web developer living in Seattle, WA. I spend my days with my hands in different areas of web development ranging from back end programming to front end web development (HTML, CSS, JavaScript, jQuery).
+            "I am a full-stack web developer living in Seattle, WA. I spend my days with my hands in different areas of web development ranging from back end programming to front end web development (HTML, CSS, JavaScript, jQuery, Node.Js).
             </p>
             <p>
-            My previous involvement in the creative arts as a pianist and piano teacher (M Mus) contributes to the artistic value of the web design; combined with my studies in psychology (Psych hons), which adds additional sensitivity and comprehension to the user’s needs.
+            My previous involvement in the creative arts as pianist and piano teacher (M Mus), contributes to the artistic value of web design; my additional my studies in psychology (Psych hons), adds to my sensitivity and comprehension of the user’s needs.
             </p>
             <p>
-            Aside from web development and design, I enjoy spending time with my husband and daughter, hiking, traveling, taking photos, and attending classical music concerts; and I look forward to visiting my family in my home town, Cape Town, South Africa, each year.
+            Aside from web development and design, I enjoy spending time with my husband and daughter, hiking, traveling, taking photos, and attending classical music concerts; and I look forward to my annual visit to my family in my beautiful home town, Cape Town, South Africa."
             </p>                              
     </div>
 
