--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
-    <title>Contact</title>
 
+    <title>Contact</title>
 </head>
 
 <body>
     <div id="mainHeader">
     <div id="header">
-        <span id="name">Heidi JvR</span>
+        <span id="name"><i class="fas fa-frog"></i> Heidi JvR</span>
     <div id="menu">
         <nav>
             <a href="index.html">About</a> |
@@ -40,7 +41,7 @@
 </div>
 
 <div id="footer">            
-<p>Copyright@</p>      
+<p>Unpublished work &#169; 2018 Heidi Jansen van Rensburg</p>      
 </div>         
 </body>
 </html>
