new portfolio added

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,8 @@
 
                     <div class="row justify-content-start">
                         <div class="col-sm-4">
-                        <img src="assets/images/Piano.jpg" alt="Piano" height="200" width="270" class="images">                              
+                            <a href = "https://heidijvr.github.io/Trivia-Game/" target="Food Trivia Game">  
+                            <img src="assets/images/screencaptureTrivia.png" alt="Piano" height="200" width="270" class="images"></a>                              
                         </div>                        
                     </div>   
             </div>        
