--- a/portfolio.html
+++ b/portfolio.html
@@ -34,29 +34,29 @@
   
                     <div class="row justify-content-start">
                         <div class="col-sm-4">
-                            <a href = "https://github.com/Heidijvr/GifTastic/" target="GiphyGame">
+                            <a href = "https://github.com/Heidijvr/GifTastic" target="GiphyGame">
                             <img src="assets/images/giphy.screenshot.png" alt="GiphyGame" height="200" width="270" class="images"></a>                               <!-- <img src="https://heidijvr.github.io/Train-Scheduler/assets/images/trainScheduler.png" alt="Train Scheduler"> -->                                  
                         </div>                                                               
                         <div class="col-sm-4">
-                            <a href = "https://heidijvr.github.io/Train-Scheduler/" target="Train Scheduler">
+                            <a href = "https://github.com/Heidijvr/Train-Scheduler" target="Train Scheduler">
                             <img src="assets/images/trainScheduler.png" alt="Train-Scheduler" height="200" width="270" class="images"></a> 
                         </div>    
                     </div>                                 
                 
                     <div class="row justify-content-start">       
                         <div class="col-sm-4">
-                            <a href = "https://github.com/Heidijvr/Crystals-Collector-unit-4-game/" target="Crystals Collector">
+                            <a href = "https://github.com/Heidijvr/Crystals-Collector-unit-4-game" target="Crystals Collector">
                             <img src="assets/images/Crystals-Collector.png" alt="Crystals Collector" height="200" width="270" class="images"></a> 
                         </div>
                         <div class="col-sm-4">
-                            <a href = "https://heidijvr.github.io/Word-Guess-Game/" target="Cartoon Word Guess Game">
+                            <a href = "https://github.com/Heidijvr/Word-Guess-Game" target="Cartoon Word Guess Game">
                             <img src="assets/images/cartoon.word.game.png" alt="Cartoon Word Guess Game" height="200" width="270" class="images"></a> 
                         </div>
                     </div>
 
                     <div class="row justify-content-start">
                         <div class="col-sm-4">
-                            <a href = "https://heidijvr.github.io/Trivia-Game/" target="Food Trivia Game">  
+                            <a href = "https://github.com/Heidijvr/Trivia-Game" target="Food Trivia Game">  
                             <img src="assets/images/screencaptureTrivia.png" alt="Piano" height="200" width="270" class="images"></a>                              
                         </div>                        
                     </div>   
