--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             Aside from web development and design, I enjoy spending time with my husband and daughter, hiking, traveling, taking photos, and attending classical music concerts; and I look forward to my annual visit to my family in my beautiful home town, Cape Town, South Africa." 
             </p>
             <p>
-            For more info: 
+                <strong>For more info:</strong> 
             </p><p>
-            <a href="https://www.linkedin.com/in/hliebenberg/">https://www.linkedin.com/in/hliebenberg/</a>  |                                                                                                                                                             
-            <a href="https://github.com/Heidijvr?tab=repositories">https://github.com/Heidijvr?tab=repositories</a>;  |     
-            <a href="https://github.com/Heidijvr/Responsive-Portfolio">https://github.com/Heidijvr/Responsive-Portfolio</a>
+            <a href="https://www.linkedin.com/in/hliebenberg/"><strong>https://www.linkedin.com/in/hliebenberg</strong>/</a>  |                                                                                                                                                             
+            <a href="https://github.com/Heidijvr?tab=repositories"><strong>https://github.com/Heidijvr?tab=repositories</strong></a>;  |     
+            <a href="https://github.com/Heidijvr/Responsive-Portfolio"><strong>https://github.com/Heidijvr/Responsive-Portfolio</strong></a>
              </p>
            
                               
