--- a/portfolio.html
+++ b/portfolio.html
@@ -57,12 +57,12 @@
                     <div class="row justify-content-start">
                         <div class="col-sm-4">
                             <a href = "https://github.com/Heidijvr/Trivia-Game" target="Food Trivia Game">  
-                            <img src="assets/images/screencaptureTrivia.png" alt="Piano" height="200" width="270" class="images"></a>                              
+                            <img src="assets/images/screencaptureTrivia.png" alt="Trivia Game" height="200" width="270" class="images"></a>                              
                         </div>                        
                     </div>   
             </div>        
         </div>     
-    </div>                                                                                        
+        </div>                                                                                       
             <div id="footer">             
             <p id="p">Unpublished work &#169; 2018 Heidi Jansen van Rensburg</p>               
             </div>        
