--- a/portfolio.html
+++ b/portfolio.html
@@ -59,6 +59,10 @@
                             <a href = "https://github.com/Heidijvr/Word-Guess-Game" target="Cartoon Word Guess Game">
                             <img src="assets/images/cartoon.word.game.png" alt="Cartoon Word Guess Game" height="200" width="280" class="images"></a> 
                         </div>
+                        <div class="col-sm-4">
+                            <a href = "https://github.com/Heidijvr/Bamazon" target="Bamazon">
+                            <img src="assets/images/Bamazon.png" alt="Bamazon" height="200" width="280" class="images"></a> 
+                        </div>
                     </div>
 
                     <div class="row justify-content-start">
