--- a/portfolio.html
+++ b/portfolio.html
@@ -76,6 +76,12 @@
                             <a href = "https://github.com/Heidijvr/FriendFinder" target="Friend Finder">  
                             <img src="assets/images/home.png" alt="Friend Finder" height="190" width="280" class="images"></a>                              
                         </div>  
+
+                        
+                        <div class="col-sm-4">
+                            <a href = "https://github.com/Heidijvr/Eat-Da-Burger-" target="Friend Finder">  
+                            <img src="assets/images/EatDaBurger.png" alt="Burger App" height="190" width="280" class="images"></a>                              
+                        </div>  
                     </div>                          
                 </div>        
         </div>     
