--- a/index.html
+++ b/index.html
@@ -29,18 +29,30 @@
             <h2>About Heidi</h2>
             <hr>
             <img alt="Heidi JvR" class="aboutPic" src="images/Heidi.jpg">     
-            <p>"I completed a full-stack web development Bootcamp via the University of Washington in April 2019 (Seattle, WA). During this course I completed projects including HTML5, CSS, JavaScript, jQuery, Node.js, MySQL, Sequelize, Express, Handlebars, Mongo, and React.js.</p>
-            <p>My former career in the creative arts as a pianist and piano teacher (M Mus), contributes to the artistic value of web design; my additional studies in psychology (Psych hons), add to my sensitivity and comprehension of the user’s needs.</p>
-            <p>Aside from web development and design, I enjoy spending time with my husband and daughter, hiking, traveling, photograghy, and attending classical music concerts; and look forward to my annual visit to family in our beautiful home-town, Cape Town, South Africa."</p>
+            <p>"A newly graduated full-stack Web Developer via University of Washington (Course Work program),
+                with a strong background as classical pianist/teacher and psychology. 
+                <!-- My projects included the following front-end frameworks: HTML, HTML5, CSS, JavaScript, jQuery and Bootstrap; 
+                and back-end frameworks such as Node.js, MySQL, Sequelize.js, Express, Handlebars, MongoDB, Mongoose, Git, Bash, Github, 
+                and React.js.</p> -->
+            <p>My former career in the arts (MMus), contribute to a creative approach
+                to web design, project management, time management skills, problem solving, multitasking, and teamwork; my 
+                additional studies in psychology (Psych hons) and journalism, add to enhanced listening, and improved verbal and 
+                written communication skills. Passionate about problem solving, in music, its teaching, and now also in programming. 
+                Looking to join an organization where opportunities for growth and professional development are embraced. 
+                A special interest in front-end frameworks: HTML, HTML5, JavaScript, jQuery, CSS, and Bootstrap.</p>
+                 
+
+            <p>Aside from web development and design, I enjoy hiking, traveling, scuba diving, attending classical music concerts, 
+                and my annual visit to family in my beautiful home-town, Cape Town, South Africa."</p>
             <p><strong>For more info:</strong></p>
             <p><a href="https://www.linkedin.com/in/hliebenberg/"><strong>https://www.linkedin.com/in/hliebenberg</strong>/</a> |                                                          
-            <a href="https://github.com/Heidijvr"><strong>https://github.com/Heidijvr</strong></a> |
-            <a href="https://github.com/Heidijvr/Responsive-Portfolio"><strong>https://github.com/Heidijvr/Responsive-Portfolio</strong></a>
+            <a href="heidijvr5@gmail.com"><strong>heidijvr5@gmail.com</strong></a> |
+            <a href="https://github.com/Heidijvr"><strong>https://github.com/Heidijvr</strong></a>
             </p> 
         </div>                                    
     </div>
     <footer>            
-       <h5>Copyright &#169; 2018</h5>   
+       <h5>Copyright &#169; 2019</h5>   
     </footer>
 </body>  
 </html>
