--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
             <div class="logo">
                 <h3>Heidi J van Rensburg</h3>
             </div>
-            <nav>
+            <!-- <nav>
                 <ul>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li style="list-style: none">|</li>
@@ -20,19 +20,56 @@
                     <li style="list-style: none">|</li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>                
-            </nav>       
+            </nav>        -->
+            <nav>
+                <ul>                    
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li style="list-style: none">|</li>
+                    <li><a href="index.html">About</a></li>
+                    <li style="list-style: none">|</li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>                
+            </nav>   
         </div>        
     </header>                                                  
     <div class="mainSection">
         <div class="contentBox">
             <h2>Portfolio</h2>
             <hr>
+            <div class="portfolio_item">               
+                <a href = "https://github.com/Heidijvr/Project-1" target="Eat, Sipp and Chill" style="display: block">
+                <img src="images/movieRoom.png" alt="Movie Room"></a>
+                <div class="portfolio_caption">
+                    Project 1: Eat, Sipp, and Chill
+                </div>   
+            </div>
             <div class="portfolio_item">
                 <a href = "https://github.com/Heidijvr/group-project-2" target="Project 2" style="display: block">
                 <img src="images/project2.SignInPage.png" alt="Project 2"></a> 
                 <div class="portfolio_caption">
-                    Project2: Sell Something
+                    Project 2: Sell Something
                 </div>
+            </div>
+            <div class="portfolio_item">
+                <a href = "https://gadabots-heidi.herokuapp.com/" target="Gadabots" style="display: block">
+                <img src="images/gadaBots1.png" alt="GadaBots"></a>
+                <div class="portfolio_caption">
+                    Project 3: GadaBots
+                </div>    
+            </div>
+            <div class="portfolio_item">               
+                <a href = "https://caricature-clicky-game.herokuapp.com/" target="Liri-Bot" style="display: block">
+                <img src="images/screencapture.png" alt="Clicky Game"></a>
+                <div class="portfolio_caption">
+                   Clicky Game
+                </div>   
+            </div>
+            <div class="portfolio_item">               
+                <a href = "https://heidijvr-mongo-scraper.herokuapp.com/" target="Eat, Sipp and Chill" style="display: block">
+                <img src="images/mongoScaper.png" alt="Movie Room"></a>
+                <div class="portfolio_caption">
+                    Mongo Scraper
+                </div>   
             </div>
             <div class="portfolio_item">
                 <a href = "https://github.com/Heidijvr/Train-Scheduler" target="Train Scheduler" style="display: block">
@@ -40,19 +77,13 @@
                 <div class="portfolio_caption">
                     Train Scheduler
                 </div>
-            </div>
-            <div class="portfolio_item">
-                <a href = "https://github.com/Heidijvr/Bamazon" target="Bamazon" style="display: block">
-                <img src="images/Bamazon.png" alt="Bamazon"></a>
-                <div class="portfolio_caption">
-                    Bamazon
-                </div>    
-            </div>
+            </div>  
+                   
             <div class="portfolio_item">
                 <a href = "https://github.com/Heidijvr/FriendFinder" target="Friend Finder" style="display: block">  
-                <img src="images/home.png" alt="Friend Finder"></a>
+                <img src="images/friendFinder.png" alt="Friend Finder"></a>
                 <div class="portfolio_caption">
-                Friend Finder
+                    Friend Finder
                 </div>    
             </div>
             <div class="portfolio_item">
@@ -68,21 +99,7 @@
                 <div class="portfolio_caption">
                     Giphy Game
                 </div>   
-            </div>
-            <div class="portfolio_item">               
-                <a href = "https://github.com/Heidijvr/Project-1" target="Eat, Sipp and Chill" style="display: block">
-                <img src="images/movieRoom.png" alt="Movie Room"></a>
-                <div class="portfolio_caption">
-                    Project 2: Eat, Sipp, and Chill
-                </div>   
-            </div>
-            <div class="portfolio_item">               
-                <a href = "https://github.com/Heidijvr/Project-1" target="Eat, Sipp and Chill" style="display: block">
-                <img src="images/movieRoom.png" alt="Movie Room"></a>
-                <div class="portfolio_caption">
-                    Project 2: Eat, Sipp, and Chill
-                </div>   
-            </div>
+            </div>           
             <div class="portfolio_item">               
                 <a href = "https://github.com/Heidijvr/Crystals-Collector-unit-4-game" target="Crystals Collector" style="display: block">
                 <img src="images/Crystals-Collector.png" alt="Crystals Collector"></a>
@@ -97,24 +114,31 @@
                     Trivia Game
                 </div>   
             </div>
-            <div class="portfolio_item">               
-                <a href = "https://github.com/Heidijvr/liri-node-app" target="Liri-Bot" style="display: block">
-                <img src="images/movie.this.screenshot.png" alt="Liri-Bot"></a>
-                <div class="portfolio_caption">
-                   Liri Bot
-                </div>   
-            </div>
             <div class="portfolio_item">            
                 <a href = "https://github.com/Heidijvr/Word-Guess-Game" target="Cartoon Word Guess Game" style="display: block">
                 <img src="images/cartoon.word.game.png" alt="Cartoon Word Guess Game"></a>
                 <div class="portfolio_caption">
                     Word Guess Game
                 </div>   
-            </div>    
+            </div> 
+            <div class="portfolio_item">               
+                <a href = "https://github.com/Heidijvr/liri-node-app" target="Liri-Bot" style="display: block">
+                <img src="images/movie.this.screenshot.png" alt="Liri-Bot"></a>
+                <div class="portfolio_caption">
+                   Liri Bot
+                </div>   
+            </div> 
+            <div class="portfolio_item">
+                <a href = "https://github.com/Heidijvr/Bamazon" target="Bamazon" style="display: block">
+                <img src="images/Bamazon.png" alt="Bamazon"></a>
+                <div class="portfolio_caption">
+                    Bamazon
+                </div>    
+            </div>  
         </div>
     </div>                                                                                                                  
     <footer>             
-    <h5>Copyright &#169; 2018 </h5>               
+    <h5>Copyright &#169; 2019 </h5>               
     </footer>   
 </body>
 </html>
