--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <hr>
             <img alt="Heidi JvR" class="aboutPic" src="images/Heidi.jpg">     
             <p>"A newly graduated full-stack Web Developer via University of Washington (Course Work program),
-                with a strong background as classical pianist/teacher and psychology. 
+                with a strong background as classical pianist/teacher and psychology.</p> 
                 <!-- My projects included the following front-end frameworks: HTML, HTML5, CSS, JavaScript, jQuery and Bootstrap; 
                 and back-end frameworks such as Node.js, MySQL, Sequelize.js, Express, Handlebars, MongoDB, Mongoose, Git, Bash, Github, 
                 and React.js.</p> -->
