--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,14 @@
                 <h3>Heidi J van Rensburg</h3>
             </div>
             <nav>
-                <!-- <ul>
+                <ul>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li style="list-style: none">|</li>
                     <li><a href="index.html">About</a></li>
                     <li style="list-style: none">|</li>
                     <li><a href="contact.html">Contact</a></li>
-                </ul> -->
-                <nav>
+                </ul>
+                <!-- <nav>
                     <ul>                    
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li style="list-style: none">|</li>
@@ -29,7 +29,7 @@
                         <li style="list-style: none">|</li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>                
-                </nav>   
+                </nav>    -->
             </nav>
         </div>
     </header>
@@ -38,10 +38,10 @@
             <h2>Contact</h2>
             <hr>
             <form>
-                <h4>Name</h4><input name="Name" placeholder=" e.g. John Harris" type="text">
-                <h4>Email</h4><input name="Email" placeholder=" e.g. john@harris.com" type="email">
+                <h4>Name</h4><input name=" Name" placeholder="  e.g. Sarah Smith" type="text">
+                <h4>Email</h4><input name=" Email" placeholder="  e.g. sarah@smith.com" type="email">
                 <h4>Message</h4>
-                <textarea placeholder="Type message here"></textarea> <button class="submit" type="submit">Submit</button>
+                <textarea placeholder=" Type message here"></textarea> <button class="submit" type="submit"> Submit</button>
             </form>
         </div>
     </div>
